flexzone.css
.themes {
    
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    text-align: center;
  font-weight: bold;
  }
  
  #main-div {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #FAFAFA;
    height: 500px;
  
}

#text-rows {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 25px;
  margin-left: 100px;
  margin-right: 100px;
  height: 300px;

}



  #logo{
      height:150px;
  }

  

 body {
     background-color: #FAFAFA;
     
  }
/* 
  ul {
      display: flex;
      justify-content: space-evenly;
      
      
      
  } */

.first-row{
  display: flex;
  
  align-items: flex-end;
  justify-content: center;
}
/* .ig-check{
  display: flex;
  flex-direction: row;
  justify-content: right;
} */

/* #check-mark{
  height: 20px;
  justify-content: center;
  align-items: center;
} */

/* .follow-dot{
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  
} */

.row-two{
  display: flex;
  justify-content: center;
  align-items: center;
  
  
  
  
}

 
  

.row-three {
  display: flex;
  align-items: center;
  justify-content: center;
}

#insta {
  align-items: center;
  display: flex;
  justify-content: center;
  
}

#message-one{
  display: flex;
  align-items: center;
  justify-content: center;
}

.lovely-message{
  display: flex;
  justify-content: center;
  align-items: center;
}

#dailyshow{
  display: flex;
  justify-content: center;
  align-items: center;
}

